--- a/style.css
+++ b/style.css
@@ -3,3 +3,108 @@
     padding: 0;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
+body {
+    position: relative;
+    background-color: rgb(45, 42, 60);
+}
+
+#top-container {
+    width: 100%;
+    height: fit-content;
+    align-items: center;
+    margin: 10px;
+}
+
+#add-btn-div {
+    display: flex;
+    justify-content: center;
+    margin: 10px 10px 10px 0px;
+}
+
+#header-section {
+    background-color: rgb(100, 92, 143);
+    display: grid;
+    height: fit-content;
+    grid-template-columns: repeat(4, 1fr);
+    padding: 10px;
+    border-radius: 20px;
+    color: white;
+    margin-bottom: 10px;
+}
+
+#header-section div {
+    display: flex;
+    justify-content: center;
+}
+
+#book-section {
+    background-color: rgb(81, 73, 109);
+    border-radius: 20px;
+    padding: 10px 0px;
+}
+
+#add-btn {
+    border-radius: 30px;
+    border: none;
+    background-color: rgb(174, 68, 158);
+    display: flex;
+    padding: 8px;
+    overflow: hidden;
+    cursor: pointer;
+    height: fit-content;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.372);
+}
+
+.add-icon {
+    height: 30px;
+    width: 30px;
+    color: white;
+}
+
+.book-style {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    border-bottom: 2px solid rgba(255, 255, 255, 0.1);
+    margin: 0px 10px;
+}
+
+.book-style p {
+    display: flex;
+    justify-content: center;
+    color: white;
+    padding: 5px 0px;
+}
+
+#blur-overlay {
+    transition: all 0.2s;
+    -webkit-filter: blur(0px);
+    display: grid;
+    grid-template-columns: 10fr 1fr;
+}
+
+#book-info {
+    padding: 10px;
+    background-color: rgba(0, 0, 0, 0.226);
+    border-radius: 20px;
+    padding: 20px;
+    position: fixed;
+    top: 30%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+
+    transition: opacity 0.5s;
+    opacity: 0;
+    visibility: hidden;
+
+}
+
+#book-info input {
+    background-color: transparent;
+    color: white;
+    border: 1px solid white;
+    border-radius: 10px;
+    padding: 5px 10px;
+    margin: 10px;
+}
